fix: perbaiki aspect ratio logo & hapus overflow: visible untuk hilangkan warning PageSpeed

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,9 +35,9 @@
   }
 }
 
-[data-aos] {
+/* [data-aos] {
   overflow: visible !important;
-}
+} */
 
 html, body {
   overflow-x: hidden !important;
